[package]
name = "raytrace"
version = "0.1.0"
authors = ["Adam Kelly <adam@cthulahoops.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "raytracelib"
path = "src/lib.rs"

[[bin]]
name = "raytrace"
path = "src/main.rs"


[dependencies]
rand={ version = "0.7", features=["small_rng"]}
derive_more = "0.13.0"
